# xfig

./: CMakeLists.txt  Fig.ad  Imakefile  f_readeps.c  f_readold.c  f_readpng.c  fig.h  main.c  patchlevel.h  u_fonts.c  u_print.c  u_quartic.c  u_redraw.c  w_intersect.c  w_keyboard.c
fig2dev/: CMakeLists.txt  Makefile  fig2dev.h  object.h
fig2dev/dev/: CMakeLists.txt  Makefile  genps.c  readpng.c  texfonts.h
